--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<!--  Skriv her  -->
 
 		<header>
-				<logo class="logo-topp">FRAM</logo>
+				<logo class="logo-topp">FRAMheihei</logo>
 		</header>
 
 		<main>
 				<img src="Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
-				<h1 class="logo-bilde">FRAM</h1>
+				<h1 class="logo-bilde"><p>FRAM</p>FRAM</h1>
+				<p>Fram?</p>
 
 		</main>
 
