--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+		<meta charset="UTF-8">
+		<title>FRAM - Home delivery from your local farms</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles/index.processed.css"> <!--  Styles  -->
+</head>
+
 <body>
-
-		<head>
-				<meta charset="UTF-8">
-				<title>FRAM - Home delivery from your local farms</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="stylesheet" href="styles/index.processed.css"> <!--  Styles  -->
-		</head>
-
 		<!--  Skriv her  -->
 
 		<header>
-				<logo class="logo-topp">FRAMheihei</logo>
+				<logo>FRAM</logo>
 		</header>
 
 		<main>
-				<img src="Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
-				<h1 class="logo-bilde"><p>FRAM</p>FRAM</h1>
-				<p>Fram?</p>
+				<img class="hovedbilde" src="Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
+				<h1 class="logo-bilde">FRAM</h1>
 
 		</main>
 
