--- a/index.html
+++ b/index.html
@@ -5,24 +5,43 @@
 		<meta charset="UTF-8">
 		<title>FRAM - Home delivery from your local farms</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles/index.processed.css"> <!--  Styles  -->
+		<link rel="stylesheet" href="styles/index.processed.css"> 
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
+	
 </head>
 
 <body>
-		<!--  Skriv her  -->
+
+
+		<nav>
+				<logo>FRAM</logo>
+		</nav>
 
 		<header>
-				<logo>FRAM</logo>
+			<div class="top-image">
+				<img src="https://assets.codepen.io/13779024/Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
+				<h1>FRAM</h1>
+			<span class="vertical-line"></span>
+			<p>Home delivery from <br>your local farms</p>
+			</div>
 		</header>
-
-		<main>
-				<img class="hovedbilde" src="Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
-				<h1 class="logo-bilde">FRAM</h1>
-
-		</main>
+	
+	<main>
+		<section class="white-boxes">
+			<div class="white-box">
+				<h2 class="grotesk">Shop our seasonal selection</h2>
+				<img class="standard-img" src="greens-front.jpg" alt="Kurv med grønnsaker">
+			</div>
+		</section>
+		
+	</main>
 
 		<footer>
-				<logo class="logo-footer">FRAM</logo>
+				<logo class="logo-footer frank">FRAM</logo>
 				<hr style="border: none; border-top: 0.5px solid white;">
 		</footer>
 
