--- a/index.html
+++ b/index.html
@@ -32,10 +32,21 @@
 	
 	<main>
 		<section class="white-boxes">
+			
 			<div class="white-box">
-				<h2 class="grotesk">Shop our seasonal selection</h2>
-				<img class="standard-img" src="greens-front.jpg" alt="Kurv med grønnsaker">
+				<h2 class="grotesk">Shop our seasonal<br> selection</h2>
+				<p class="frank front-frank">Updated every week</p>
+				<img class="standard-img white-img" src="greens-front.jpg" alt="Kurv med grønnsaker">
+				<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
 			</div>
+			
+			<div class="white-box">
+				<h2 class="grotesk">Ask us about<br> anything</h2>
+				<p class="frank front-frank">All your questions answered</p>
+				<img class="standard-img white-img" src="Man-field_front.jpg" alt="Mann står i en åker og peker">
+				<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
+			</div>
+			
 		</section>
 		
 	</main>
