--- a/index.html
+++ b/index.html
@@ -5,58 +5,111 @@
 		<meta charset="UTF-8">
 		<title>FRAM - Home delivery from your local farms</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles/index.processed.css"> 
-	
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
-	
+		<link rel="stylesheet" href="styles/index.processed.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
-
+		<!-- NAVIGATION------------------------------------------>
 		<nav>
 				<logo>FRAM</logo>
 		</nav>
 
+		<!-- HEADER------------------------------------------>
+
 		<header>
-			<div class="top-image">
-				<img src="https://assets.codepen.io/13779024/Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap">
-				<h1>FRAM</h1>
-			<span class="vertical-line"></span>
-			<p>Home delivery from <br>your local farms</p>
-			</div>
+				<div class="top-image">
+						<img src="https://assets.codepen.io/13779024/Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap. Foto: Markus Spiske via Unsplash">
+						<h1>FRAM</h1>
+						<span class="vertical-line"></span>
+						<p>Home delivery from <br>your local farms</p>
+				</div>
 		</header>
-	
-	<main>
-		<section class="white-boxes">
-			
-			<div class="white-box">
-				<h2 class="grotesk">Shop our seasonal<br> selection</h2>
-				<p class="frank front-frank">Updated every week</p>
-				<img class="standard-img white-img" src="greens-front.jpg" alt="Kurv med grønnsaker">
-				<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
-			</div>
-			
-			<div class="white-box">
-				<h2 class="grotesk">Ask us about<br> anything</h2>
-				<p class="frank front-frank">All your questions answered</p>
-				<img class="standard-img white-img" src="Man-field_front.jpg" alt="Mann står i en åker og peker">
-				<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
-			</div>
-			
-		</section>
-		
-	</main>
+
+		<main>
+
+				<!-- WHITE BOXES------------------------------------------>
+				<section class="white-boxes">
+
+						<div class="white-box border-right">
+								<h2 class="grotesk">Shop our seasonal<br> selection</h2>
+								<p class="frank front-frank">Updated every week</p>
+								<img class="standard-img white-img" src="greens-front.jpg" alt="Kurv med grønnsaker. Foto: Nina Luong via Unsplash">
+								<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
+								<button class="red-button grotesk">Browse our selection</button>
+						</div>
+
+						<div class="white-box">
+								<h2 class="grotesk">Ask us about<br> anything</h2>
+								<p class="frank front-frank">All your questions answered</p>
+								<img class="standard-img white-img" src="Man-field_front.jpg" alt="Mann står i en åker og peker. Foto: Rebecca Ritchie via Unsplash">
+								<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
+								<button class="red-button grotesk">Go to chat</button>
+						</div>
+				</section>
+
+				<!-- HOW IT WORKS------------------------------------------>
+
+				<section class="how-it-works">
+						<div class="how-it-works-left">
+								<h2 class="grotesk">THIS IS HOW IT <br>WORKS</h2>
+						</div>
+
+						<div class="how-it-works-right">
+								<section class="step">
+										<h3>ORDER GROCERIES</h3>
+										<p>Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.</p>
+										<p><a href="#">See our stock here</a></p>
+								</section>
+
+								<section class="step">
+										<h3>STOCK UP</h3>
+										<p>Once your order arrives, unpack the produce and store it however it works best for you. Hold onto the containers — they’re yours to keep until your next order.</p>
+								</section>
+
+								<section class="step">
+										<h3>SCAN &amp; REORDER</h3>
+										<p>Ready for a refill? Grab the containers from your last order and scan the QR code with our app or your phone’s camera. This instantly adds the items back to your cart, making reordering a breeze.</p>
+								</section>
+
+								<section class="step">
+										<h3>SWAP &amp; REUSE</h3>
+										<p>When we deliver your new order, simply leave your empty containers outside. We’ll pick them up, clean them thoroughly, and reuse them for future deliveries.</p>
+								</section>
+
+						</div>
+				</section>
+
+		</main>
+
+		<!-- FOOTER------------------------------------------>
 
 		<footer>
 				<logo class="logo-footer frank">FRAM</logo>
 				<hr style="border: none; border-top: 0.5px solid white;">
+				<h2 class="grotesk">Stay updated</h2>
+				<p class="frank">Sign up for our newsletter to be the first<br> to know about new produce or other<br> exciting news!</p>
+
+				<form class="form" id="form" action="mailto:hei@fram.com" method="post" enctype="text/plain">
+						<label for="name"></label>
+						<input type="text" id="name" name="name" required placeholder="First name">
+					
+						<label for="epost"></label>
+						<input type="email" id="email" name="email" required placeholder="E-mail adress">
+
+						<button type="submit" class="form-button">Send</button>
+				</form>
+
 		</footer>
 
 		<script src="scripts/index.js"></script> <!-- Scripts -->
+
 </body>
 
 </html>
