Fixed brown box
plus new page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="white-box border-right">
 								<h2 class="grotesk">Shop our seasonal<br> selection</h2>
 								<p class="frank front-frank">Updated every week</p>
-								<img class="standard-img white-img" src="greens-front.jpg" alt="Kurv med grønnsaker. Foto: Nina Luong via Unsplash">
+								<img class="standard-img white-img" src="https://assets.codepen.io/13779024/greens-front.jpg" alt="Kurv med grønnsaker. Foto: Nina Luong via Unsplash">
 								<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
 								<button class="red-button grotesk">Browse our selection</button>
 						</div>
@@ -48,7 +48,7 @@
 						<div class="white-box">
 								<h2 class="grotesk">Ask us about<br> anything</h2>
 								<p class="frank front-frank">All your questions answered</p>
-								<img class="standard-img white-img" src="Man-field_front.jpg" alt="Mann står i en åker og peker. Foto: Rebecca Ritchie via Unsplash">
+								<img class="standard-img white-img" src="https://assets.codepen.io/13779024/Man-field_front.jpg" alt="Mann står i en åker og peker. Foto: Rebecca Ritchie via Unsplash">
 								<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
 								<button class="red-button grotesk">Go to chat</button>
 						</div>
@@ -64,23 +64,31 @@
 						<div class="how-it-works-right">
 								<section class="step">
 										<h3>ORDER GROCERIES</h3>
-										<p>Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.</p>
-										<p><a href="#">See our stock here</a></p>
+										<div>
+												<p>Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.</p>
+												<p class="mb-0"><a href="#">See our stock here</a></p>
+										</div>
 								</section>
 
 								<section class="step">
 										<h3>STOCK UP</h3>
-										<p>Once your order arrives, unpack the produce and store it however it works best for you. Hold onto the containers — they’re yours to keep until your next order.</p>
+										<div>
+												<p>Once your order arrives, unpack the produce and store it however it works best for you. Hold onto the containers — they’re yours to keep until your next order.</p>
+										</div>
 								</section>
 
 								<section class="step">
 										<h3>SCAN &amp; REORDER</h3>
-										<p>Ready for a refill? Grab the containers from your last order and scan the QR code with our app or your phone’s camera. This instantly adds the items back to your cart, making reordering a breeze.</p>
+										<div>
+												<p>Ready for a refill? Grab the containers from your last order and scan the QR code with our app or your phone’s camera. This instantly adds the items back to your cart, making reordering a breeze.</p>
+										</div>
 								</section>
 
 								<section class="step">
 										<h3>SWAP &amp; REUSE</h3>
-										<p>When we deliver your new order, simply leave your empty containers outside. We’ll pick them up, clean them thoroughly, and reuse them for future deliveries.</p>
+										<div>
+												<p>When we deliver your new order, simply leave your empty containers outside. We’ll pick them up, clean them thoroughly, and reuse them for future deliveries.</p>
+										</div>
 								</section>
 
 						</div>
@@ -99,7 +107,7 @@
 				<form class="form" id="form" action="mailto:hei@fram.com" method="post" enctype="text/plain">
 						<label for="name"></label>
 						<input type="text" id="name" name="name" required placeholder="First name">
-					
+
 						<label for="epost"></label>
 						<input type="email" id="email" name="email" required placeholder="E-mail adress">
 
