Fjernet api-key
Vil ikke commite med api-key

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>FRAM - Home delivery from your local farms</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles/index.processed.css">
+		<link rel="stylesheet" href="styles/index.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,6 +93,12 @@
 
 						</div>
 				</section>
+
+				<!-- POPULAR PRODUCE ------------------------------------------>
+				<section class="popular">
+			<h2 class="grotesk">POPULAR PRODUCE</h2>
+				</section>
+	
 
 		</main>
 
