--- a/product.html
+++ b/product.html
@@ -31,4 +31,31 @@
 				</section>
 
 		</main>
+
+		<!-- FOOTER------------------------------------------>
+
+		<footer>
+				<logo class="logo-footer frank">FRAM</logo>
+				<hr style="border: none; border-top: 0.5px solid white;">
+				<h2 class="grotesk">Stay updated</h2>
+				<p class="frank">Sign up for our newsletter to be the first<br> to know about new produce or other<br> exciting news!</p>
+
+				<form class="form" id="form" action="mailto:hei@fram.com" method="post" enctype="text/plain">
+						<label for="name"></label>
+						<input type="text" id="name" name="name" required placeholder="First name">
+
+						<label for="email"></label>
+						<div class="input-wrapper">
+								<input type="email" id="email" name="email" required placeholder="E-mail adress">
+
+								<button type="submit" class="submit-arrow">
+										<svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M5 12h14M13 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+										</svg>
+								</button>
+						</div>
+
+				</form>
+
+		</footer>
 </body>
