--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>FRAM - Home delivery from your local farms</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles/index.processed.css">
+		<link rel="stylesheet" href="styles/index.css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,8 @@
 
 				<section class="produce">
 						<h2 class="left grotesk">produce</h2>
-
+                        <div class="text-wrapper">
+<p class="grotesk left">Explore our selection of seasonal produce, sourced directly from local farms to ensure peak freshness and quality. Every item is chosen with care, supporting sustainable practices and bringing the best of the harvest to your table</p></div>
 				</section>
 
 		</main>
