--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </nav>
 
     <!-- HEADER------------------------------------------>
+
     <header>
         <div class="top-image">
             <img src="https://assets.codepen.io/13779024/Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap. Foto: Markus Spiske via Unsplash">
@@ -63,6 +64,7 @@
 
     <main>
         <!-- WHITE BOXES------------------------------------------>
+
         <section class="white-boxes">
 			<div class="container">
 				<div class="white-box">
@@ -85,6 +87,7 @@
         </section>
 
         <!-- HOW IT WORKS------------------------------------------>
+
         <section class="how-it-works">
             <div class="how-it-works-left">
                 <h2 class="grotesk">THIS IS HOW IT <br>WORKS</h2>
@@ -94,7 +97,7 @@
                     <h3>ORDER GROCERIES</h3>
                     <div>
                         <p>Fram is a circular service that ensures your kitchen is always stocked with the essentials you need. Browse our seasonal selection, choose your items, and place your order online.</p>
-                        <p class="mb-0"><a href="#">See our stock here</a></p>
+                        <p class="mb-0"><a href="product.html">See our stock here</a></p>
                     </div>
                 </section>
                 <section class="step">
@@ -119,6 +122,7 @@
         </section>
 
         <!-- POPULAR PRODUCE ------------------------------------------>
+
 		<section class="popular">
 			<div class="container">
 				<h2 class="grotesk">POPULAR PRODUCE</h2>
