--- a/product.html
+++ b/product.html
@@ -54,6 +54,7 @@
 
 
         <!-- PRODUCE------------------------------------------>
+
         <section class="produce">
             <div class="container">
             <h2 class="left grotesk">produce</h2>
@@ -64,7 +65,7 @@
             </div>
             </div>
         </section>
-        <div class="brown">
+        <div>
             <div class="container">
             <div class="product-container product-container-wrap">
                 <!-- Produktkort 1: Oats -->
