--- a/product.html
+++ b/product.html
@@ -148,16 +148,8 @@
             </div>
 
             <div class="how-it-works-right-map">
-                <!-- Google kart legges inn via et iframe-element -->
-                <iframe width="100%"
-                    height="400" 
-                    style="border:0;"
-                    loading="lazy" 
-                    allowfullscreen
-                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBekhQHwCeJ_4mUZpo-TgUyRk70kYkriaQ&amp;q=Oppdalslinna+242,+Roa">
-                </iframe>
 
-
+            <div id="map"></div>
             </div>
 
 
@@ -189,7 +181,14 @@
         </form>
     </footer>
   <script src="scripts/index.js" defer></script>
-    <script src="scripts/chatbot.js" defer></script>
+    <script src="scripts/map.js" defer></script>
+  <script src="scripts/chatbot.js" defer></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR-GOOGLE-MAPS-API-KEY&callback=initMap"></script>
+  <script
+src="https://maps.googleapis.com/maps/api/js?key=YOUR-GOOGLE-MAPS-API-KEY&callback=initMap&v=weekly&libraries=marker"
+defer
+></script>
+
 
 </body>
 
