Fjernet action i skjema
Fjernet action i skjema som gikk til en epost. La på hover på skjema-knapp.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		<h2 class="grotesk">Stay updated</h2>
 		<p class="frank">Sign up for our newsletter to be the first<br> to know about new produce or other<br> exciting
 			news!</p>
-		<form class="form" id="form" action="mailto:hei@fram.com" method="post" enctype="text/plain">
+		<form class="form" id="form" method="post" enctype="text/plain">
 			<label for="name"></label>
 			<input type="text" id="name" name="name" required placeholder="First name">
 			<label for="epost"></label>
